Renamed the project to ‘Rekey.

--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Help SAI</title>
+  <title>Rekey</title>
   <script src="./jquery.js"></script>
   <link rel="stylesheet" href="./font-awesome.css">
   <link rel="stylesheet" href="./main.css">
