--- a/main.html
+++ b/main.html
@@ -2,9 +2,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Rekey</title>
-  <script src="./jquery.js"></script>
-  <link rel="stylesheet" href="./font-awesome.css">
-  <link rel="stylesheet" href="./main.css">
+  <script src="./js/jquery.js"></script>
+  <link rel="stylesheet" href="./css/font-awesome.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
   <div class="button" id="buttonDrag"><i class="fa fa-circle-o"></i></div>
@@ -13,6 +13,6 @@
   <div class="button" id="buttonRedo"><i class="fa fa-arrow-right"></i></div>
   <div class="button" id="buttonMove"><i class="fa fa-arrows"></i></div>
    <div class="button" id="buttonEraser"><i class="fa fa-eraser"></i></div>
-  <script src="./main.js"></script> 
+  <script src="./js/main.js"></script> 
 </body>
 </html>
