Disabled the unstable eraser tool. Added check tool. Added TODO items.

--- a/main.html
+++ b/main.html
@@ -12,7 +12,9 @@
   <div class="button" id="buttonUndo"><i class="fa fa-arrow-left"></i></div>
   <div class="button" id="buttonRedo"><i class="fa fa-arrow-right"></i></div>
   <div class="button" id="buttonMove"><i class="fa fa-arrows"></i></div>
-   <div class="button" id="buttonEraser"><i class="fa fa-eraser"></i></div>
+  <!-- <div class="button" id="buttonEraser"><i class="fa fa-eraser"></i></div> -->
+  <div class="button" id="buttonTransform"><i class="fa fa-object-group"></i></div>
+  <div class="button" id="buttonCheck"><i class="fa fa-check"></i></div>
   <script src="./js/main.js"></script> 
 </body>
 </html>
