Create a cover when use the transform tool.

--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+  <div id="cover"></div>
   <div class="button" id="buttonDrag"><i class="fa fa-circle-o"></i></div>
   <div class="button" id="buttonExit"><i class="fa fa-times"></i></div>
   <div class="button" id="buttonUndo"><i class="fa fa-arrow-left"></i></div>
